tests/syntax_error/const1.jou
const 1 = "lol"  # Error: expected a name for the constant, got an integer
